@@ -1,0 +1,1 @@
+perl5 module LWP::Protocol::Net::Curl - Provide Curl support for LWP::UserAgent
